// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Suggester > renders empty if request fails 1`] = `
<body>
  <div>
    <span
      aria-live="polite"
      style="width: 0px; height: 0px; position: absolute; overflow: hidden; opacity: 0;"
    >
      test
    </span>
    <div
      class="ant-select ant-select-outlined ant-select-auto-complete css-var-root ant-select-css-var css-dev-only-do-not-override-oc1rc0 ant-select-focused ant-select-single ant-select-show-search"
    >
      <div
        class="ant-select-content ant-select-content-has-value ant-select-content-has-search-value"
        title="test"
      >
        test
        <input
          aria-autocomplete="list"
          aria-expanded="false"
          aria-haspopup="listbox"
          autocomplete="new-password"
          class="ant-select-input"
          id="test-id"
          role="combobox"
          type="text"
          value="test"
        />
      </div>
    </div>
  </div>
</body>
`;

exports[`Suggester > renders results with custom result template 1`] = `
<body>
  <div>
    <div
      class="ant-select ant-select-outlined ant-select-auto-complete css-var-root ant-select-css-var css-dev-only-do-not-override-oc1rc0 ant-select-focused ant-select-single ant-select-open ant-select-show-search"
    >
      <div
        class="ant-select-content ant-select-content-has-value ant-select-content-has-search-value"
        title="test"
      >
        test
        <input
          aria-activedescendant="test-id_list_-1"
          aria-autocomplete="list"
          aria-controls="test-id_list"
          aria-expanded="true"
          aria-haspopup="listbox"
          aria-owns="test-id_list"
          autocomplete="new-password"
          class="ant-select-input"
          id="test-id"
          role="combobox"
          type="text"
          value="test"
        />
      </div>
    </div>
  </div>
  <div>
    <div
      class="ant-select-dropdown ant-slide-up-appear ant-slide-up-appear-prepare ant-slide-up css-var-root ant-select-css-var css-dev-only-do-not-override-oc1rc0 ant-select-dropdown-placement-bottomLeft"
      style="--arrow-x: 0px; --arrow-y: 0px; left: -1000vw; top: -1000vh; right: auto; bottom: auto; box-sizing: border-box;"
    >
      <div>
        <div
          id="test-id_list"
          role="listbox"
          style="height: 0px; width: 0px; overflow: hidden;"
        >
          <div
            aria-selected="false"
            id="test-id_list_0"
            role="option"
          >
            Result 1
          </div>
        </div>
        <div
          class="ant-select-dropdown-list"
          style="position: relative;"
        >
          <div
            class="ant-select-dropdown-list-holder"
            style="max-height: 256px; overflow-y: hidden; overflow-anchor: none;"
          >
            <div>
              <div
                class="ant-select-dropdown-list-holder-inner"
                style="display: flex; flex-direction: column;"
              >
                <div
                  aria-disabled="false"
                  class="ant-select-item ant-select-item-option"
                >
                  <div
                    class="ant-select-item-option-content"
                  >
                    <span>
                      Result 1
                       
                      <em>
                        Extra 1
                      </em>
                    </span>
                  </div>
                  <span
                    aria-hidden="true"
                    class="ant-select-item-option-state"
                    style="user-select: none;"
                    unselectable="on"
                  />
                </div>
                <div
                  aria-disabled="false"
                  class="ant-select-item ant-select-item-option"
                >
                  <div
                    class="ant-select-item-option-content"
                  >
                    <span>
                      Result 2
                       
                      <em>
                        Extra 2
                      </em>
                    </span>
                  </div>
                  <span
                    aria-hidden="true"
                    class="ant-select-item-option-state"
                    style="user-select: none;"
                    unselectable="on"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;
